# vai-samples

./: .gitignore  .gitmodules  CMakeLists.txt
10-mnist/: CMakeLists.txt  neuralNet.h  neuralNodes.h  spirvHelpers.cpp  tensor.h  test.cpp  vulkanApp.cpp  vulkanApp.h  weights.json
101-EfficientNet-dongyeob/: CMakeLists.txt  efficientNet.cpp  efficientNet.h  error.h  jsonParser.cpp  jsonParser.h  main.cpp  neuralNet.h  neuralNodes.cpp  neuralNodes.h  spirvHelpers.cpp  templateHelper.h  tensor.h  test.cpp
102-ResNet-JongSeok/: main.cpp
104-PointNet-Jeonghan/: PythonMNIST.py  error.h  jsonParser.cpp  main copy.cpp  neuralNodes.cpp  neuralNodes.h  point_net.cpp  tensor.h  test.cpp  vulkanApp.cpp  vulkanApp.h
105-GAN-hyunwoo/: CMakeLists.txt  benchmark.cpp  gan.h  jsonParser.h  main.cpp  neuralNet.h  neuralNodes.cpp  neuralNodes.h  test.cpp  vulkanApp.cpp
11-mnist-refactor/: CMakeLists.txt  error.h  ndarray.h  neuralNet.h  neuralNodes.cpp  neuralNodes.h  temp.cpp  templateHelper.h  tensor.h  test.cpp  vulkanApp.cpp  vulkanApp.h
110-GPT2-hyungkyu/: CMakeLists.txt  main.cpp
110-GPT2-hyungkyu/model/: gpt2.cpp  gpt2.h  gpt2Test.cpp  testHelpers.h
110-GPT2-hyungkyu/model/attention/: attentionNode.cpp  attentionNode.h  attentionNodeTest.cpp  generate_test_data.py  mha_test_data.json
110-GPT2-hyungkyu/model/embedding/: embeddingNode.cpp
110-GPT2-hyungkyu/model/transformer/: feedforward_test_data.json  gelu_test_data.json  generate_test_data.py  layer_norm_test_data.json  transformerNode.cpp  transformerNode.h  transformerNodeTest.cpp  transformer_block_test_data.json
113-GoogleNet-Huicheol/: main.cpp
114-MobileNetV2-hwPark/: CmakeLists.txt  main.cpp
114-MobileNetV2-hwPark/core/: error.h  neural_net.cpp  neural_net.h  tensor.cpp  tensor.h  vulkan_app.cpp  vulkan_app.h
114-MobileNetV2-hwPark/dataloader/: image_loader.cpp  image_loader.h
114-MobileNetV2-hwPark/model/: mobilenet_v2.cpp  mobilenet_v2.h
114-MobileNetV2-hwPark/nodes/: base_node.cpp  base_node.h
114-MobileNetV2-hwPark/utils/: json_parser.cpp  json_parser.h
